add css and animation to the board

--- a/index.html
+++ b/index.html
@@ -9,22 +9,24 @@
 </head>
 
 <body>
-    <h1> TIC TAC TOE GAME</h1>
-    <form>
-        <p>Name Player 1 ('X'): <input type="text" name="player1" required/></p>
-        <p>Name Player 2 ('O'): <input type="text" name="player2" required/></p>
-        <div id="button">
-            <button id="startgame" type="submit">START GAME</button>            
-        </div>    
-    </form><br>
-    <span></span>
-    <div id="shade" class=""></div>
-    <table>
+    <div id="animate"><h2> <code>T</code><code>I</code><code>C</code> <code>T</code><code>A</code><code>C</code> <code>T</code><code>O</code><code>E</code> <code>G</code><code>A</code><code>M</code><code>E</code></h2></div>
+    <div id="container">
+        <form>
+            <p>Name Player 1 ('X'): <input type="text" name="player1" required/></p>
+            <p>Name Player 2 ('O'): <input type="text" name="player2" required/></p>
+            <div id="button">
+                <button id="startgame" type="submit">START GAME</button>            
+            </div>    
+        </form><br>
+        <span></span>
+        <div id="shade" class=""></div>
+        <table>
         
-    </table> <br/><br/>
-    <div class="splash"></div>
-    <script src="asset/gameboard.js"></script>
-    <script src="asset/gamePlay.js"></script>
+        </table> <br/><br/>
+        <div class="splash"></div>
+        <script src="asset/gameboard.js"></script>
+        <script src="asset/gamePlay.js"></script>
+    </div>
 </body>
 
 </html>
