--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>TicTacToe</title>
     <link rel="stylesheet" href="asset/style.css" />
+    <link href='https://fonts.googleapis.com/css?family=Monoton' rel='stylesheet'>
 </head>
 
 <body>
